--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
   <body>
@@ -21,6 +22,25 @@
     - The freeCodeCamp Team
 
     -->
+    <navbar id = "navbar">
+      <ul>
+        <li><a href="#welcome-section">Welcome</a></li>
+        <li><a href="#projects">My Projects</a></li>
+        <li><a id="profile-link" href="https://www.github.com/PieroZev">My Github Profile</a></li>
+      </ul>  
+    </navbar>
+
+    <section id="welcome-section">
+      <h1>My Portfolio</h1>
+
+    </section>
+
+    <section id="projects">
+      <div class="project-tile"></div>
+      <a href="https://www.youtube.com">Link to my youtube channel</a>
+    </section>
+
+
     <script  src="js/index.js"></script>
   </body>
 </html>
