--- a/fcc-test-suite-template-master/index.html
+++ b/fcc-test-suite-template-master/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>My portfolio</title>
+    <link rel="stylesheet" href="./css/style.css">
+    
   </head>
-
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
-    <script  src="js/index.js"></script>
-  </body>
+  <section id="welcome-section">
+    <h1>Welcome to my Portfolio</h1>
+  </section>
+  <section id="projects">
+     <div class="project-tile">
+       <h3>Project Title</h3>
+      <p>Micro-Verse-Trials-Kevin-Piero.</p>
+      <a href="https://example.com/project">View project</a>
+      <nav id="navbar">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="https://github.com/your-username" target="_blank">GitHub</a></li>
+    </ul>
+  </nav>
+      
+    </div>
+   
+  </section>
+  <nav id="navbar">
+  </nav>
+  <a id="profile-link" href="https://github.com/kipkoehkevin42" target="_blank">View my GitHub profile</a>
+<script src="./js/index.js"></script> 
+</body>
 </html>
